@@ -1,23 +1,21 @@
 package com.shop.spring.data.intershop.integration;
 
-import com.shop.spring.data.intershop.model.Item;
-import com.shop.spring.data.intershop.model.Order;
 import com.shop.spring.data.intershop.service.ShopService;
+import com.shop.spring.data.intershop.view.dto.ItemDto;
+import com.shop.spring.data.intershop.view.dto.OrderDto;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.Mock;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.context.TestPropertySource;
 import org.springframework.test.web.servlet.MockMvc;
 
+import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
-import static org.mockito.ArgumentMatchers.*;
-import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
@@ -27,21 +25,30 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 @TestPropertySource(locations = "classpath:application-test.properties")
 public class ShopControllerCustomOrderTest {
 
-
     @Autowired
     private MockMvc mockMvc;
 
-    @Mock
+    @Autowired
     private ShopService shopService;
 
-    private Item testItem;
-    private Order testOrder;
+    private ItemDto testItem;
+    private OrderDto testOrder;
 
     @BeforeEach
     void setUp() {
-        testItem = new Item("1", "Тестовый товар", "Описание товара", "/images/test.jpg", 10, 100.0);
-        List<Item> orderItems = List.of(testItem);
-        testOrder = new Order("1", orderItems);
+        testItem = new ItemDto();
+        testItem.setId("1");
+        testItem.setTitle("Тестовый товар");
+        testItem.setDescription("Описание товара");
+        testItem.setImage("/images/test.jpg");
+        testItem.setCount(10);
+        testItem.setPrice(100.0);
+
+        List<ItemDto> orderItems = Collections.singletonList(testItem);
+
+        testOrder = new OrderDto();
+        testOrder.setId("1");
+        testOrder.setItems(orderItems);
     }
 
     @Test
@@ -53,11 +60,8 @@ public class ShopControllerCustomOrderTest {
 
     @Test
     void testGetMainItems() throws Exception {
-        List<List<Item>> items = new ArrayList<>();
+        List<List<ItemDto>> items = new ArrayList<>();
         items.add(Collections.singletonList(testItem));
-
-        when(shopService.getMainItems(anyString(), any(), anyInt(), anyInt()))
-                .thenReturn(items);
 
         mockMvc.perform(get("/main/items")
                         .param("search", "")
@@ -71,14 +75,8 @@ public class ShopControllerCustomOrderTest {
                 .andExpect(model().attributeExists("sort"));
     }
 
-
     @Test
     void testGetCartItems() throws Exception {
-        List<Item> cartItems = Collections.singletonList(testItem);
-        when(shopService.getCartItems()).thenReturn(cartItems);
-        when(shopService.getCartTotal()).thenReturn(100.0);
-        when(shopService.isCartEmpty()).thenReturn(false);
-
         mockMvc.perform(get("/cart/items"))
                 .andExpect(status().isOk())
                 .andExpect(view().name("cart"))
@@ -97,8 +95,6 @@ public class ShopControllerCustomOrderTest {
 
     @Test
     void testGetItem() throws Exception {
-        when(shopService.getItem("1")).thenReturn(testItem);
-
         mockMvc.perform(get("/items/1"))
                 .andExpect(status().isOk())
                 .andExpect(view().name("item"))
@@ -113,12 +109,8 @@ public class ShopControllerCustomOrderTest {
                 .andExpect(redirectedUrl("/items/1"));
     }
 
-
     @Test
     void testGetOrders() throws Exception {
-        List<Order> orders = Collections.singletonList(testOrder);
-        when(shopService.getOrders()).thenReturn(orders);
-
         mockMvc.perform(get("/orders"))
                 .andExpect(status().isOk())
                 .andExpect(view().name("orders"))
@@ -127,8 +119,6 @@ public class ShopControllerCustomOrderTest {
 
     @Test
     void testGetOrder() throws Exception {
-        when(shopService.getOrder("1")).thenReturn(testOrder);
-
         mockMvc.perform(get("/orders/1")
                         .param("newOrder", "true"))
                 .andExpect(status().isOk())
